--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,15 +10,24 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    # Route for static assets (HTML, CSS, JS, images, etc.)
+    # Route for static assets (HTML, CSS, JS, etc.)
     location / {
         try_files $uri $uri/ /index.html; # Serve file if exists, directory if exists, fallback to index.html
         # Add caching headers for static assets (optional but good practice)
-        location ~* \.(?:css|js|jpg|jpeg|gif|png|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
+        location ~* \.(?:css|js|ico|svg|woff|woff2|ttf|eot)$ {
+            expires 1d;
             add_header Cache-Control "public";
             access_log off; # Don't log access for static files
         }
+    }
+
+    # --- Location block for locally served sprites ---
+    location /assets/sprites/ {
+        # Sets cache control headers for sprites
+        expires 1y; # Cache sprites for a long time
+        add_header Cache-Control "public";
+        access_log off; # Don't log access for sprites
+        try_files $uri =404; # Serve the file if it exists, otherwise 404
     }
 
     # Route for API requests - Proxy to the backend service
