--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -22,7 +22,7 @@ server {
     }
 
     # --- Location block for locally served sprites ---
-    location /assets/sprites/ {
+    location /assets/ {
         # Sets cache control headers for sprites
         expires 1y; # Cache sprites for a long time
         add_header Cache-Control "public";
