--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,6 +10,19 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
+    # --- Custom Error Pages ---
+    error_page 404 /404.html;
+    location = /404.html {
+        internal; # Prevents direct access to the error page file
+        root /usr/share/nginx/html; # Ensure Nginx knows where to find it
+    }
+
+    error_page 500 502 503 504 /50x.html; # Catch common server errors
+    location = /50x.html {
+        internal;
+        root /usr/share/nginx/html;
+    }
+
     # Route for static assets (HTML, CSS, JS, etc.)
     location / {
         try_files $uri $uri/ /index.html; # Serve file if exists, directory if exists, fallback to index.html
@@ -42,6 +55,9 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
+        # --- Intercept Backend Errors ---
+        proxy_intercept_errors on; # Tell Nginx to handle backend errors specified in error_page
+        
         # WebSocket support (optional, if needed in the future)
         # proxy_http_version 1.1;
         # proxy_set_header Upgrade $http_upgrade;
