--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,4 @@ redis[hiredis]>=4.4.0 # Use a version supporting async and hiredis for performan
 python-dotenv         # For loading .env file (optional but good practice)
 pydantic              # Explicitly list for clarity, though fastapi depends on it
 pydantic_settings
+../pokeapi_wrapper_lib
