--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,5 +6,5 @@ httpx
 #redis[hiredis]>=4.4.0 # Use a version supporting async and hiredis for performance
 python-dotenv         # For loading .env file (optional but good practice)
 pydantic>=2.0              # Explicitly list for clarity, though fastapi depends on it
-#pydantic_settings
--e ../pokeapi_wrapper_lib
+pydantic_settings
+pokeapi-wrapper-lib @ git+https://github.com/miethe/pokeapi_wrapper_lib
