--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,4 +7,4 @@ httpx
 python-dotenv         # For loading .env file (optional but good practice)
 pydantic>=2.0              # Explicitly list for clarity, though fastapi depends on it
 pydantic_settings
-#pokeapi-wrapper-lib @ git+https://github.com/miethe/pokeapi_wrapper_lib
+pokeapi-wrapper-lib @ git+https://github.com/miethe/pokeapi_wrapper_lib
